Add model and case filters to timeline API
